--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
 # Files to ignore
-.idea/markdown-navigator/
-.idea/misc.xml
-.idea/modules.xml
-.idea/website.iml
-.idea/workspace.xml
-.idea/inspectionProfiles
-.idea/markdown-navigator.xml
-.idea/vcs.xml
+.idea
